feat : test error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/security?serverTimezone=UTC
 
 #??? ?? ?? ??  _ ?? ?? ??
 spring.jpa.hibernate.ddl-auto=update
+
+#token secret key
+#???? ?? ?? Spring Boot ??????? ?????? @Value ?????? ???? ??? ? ????.
+jwt.token.secret="secretKey" 
