--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 #token secret key
 #???? ?? ?? Spring Boot ??????? ?????? @Value ?????? ???? ??? ? ????.
-jwt.token.secret="secretKey" 
+jwt.token.secret=hello.world.ee.ff 
